(confirm dialog) change order of yes/no and use button-primary and button-secondary

--- a/client/src/icons/icon-active-state.css
+++ b/client/src/icons/icon-active-state.css
@@ -5,9 +5,9 @@ icon-active-state {
 }
 
 icon-active-state svg.state-active {
-  fill: var(--q-color-yes-5);
+  fill: var(--q-color-success);
 }
 
 icon-active-state svg.state-inactive {
-  fill: var(--q-color-no-5);
+  fill: var(--q-color-error);
 }
