--- a/client/src/icons/icon-save-state.css
+++ b/client/src/icons/icon-save-state.css
@@ -5,9 +5,9 @@ icon-save-state {
 }
 
 icon-save-state.state-saved {
-  fill: var(--q-color-yes-5);
+  fill: var(--q-color-success);
 }
 
 icon-save-state.state-unsaved {
-  fill: var(--q-color-no-5);
+  fill: var(--q-color-error);
 }
