Reduce padding of show more tools button

--- a/client/src/elements/organisms/tool-selection.css
+++ b/client/src/elements/organisms/tool-selection.css
@@ -17,7 +17,7 @@ tool-selection {
 }
 
 .tool-selection__toggle-tools-button button {
-  padding-right: calc(var(--q-space-base) * 2);
+  padding-right: var(--q-space-base);
 }
 
 .tool-selection__list {
