(dialogs) improve dialog with subtitle appearance

--- a/client/src/styles/config.css
+++ b/client/src/styles/config.css
@@ -45,6 +45,7 @@
 
   --q-text-size: 14px;
   --q-text-small-size: 12px;
+  --q-text-big-size: 16px;
 
   --q-h1-weight: 700;
   --q-h2-weight: 400;
