--- a/client/src/styles/q-dialog.css
+++ b/client/src/styles/q-dialog.css
@@ -11,6 +11,10 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.33);
 }
 
+.q-dialog-subtitle {
+  margin: calc(var(--q-space-base) * 3) 0;
+}
+
 .q-dialog--bottom-controls {
   flex-direction: column;
 }
@@ -39,6 +43,7 @@
   padding-left: 0;
   flex-direction: row;
   width: 100%;
+  margin-top: calc(var(--q-space-base) * 2);
 }
 
 .q-dialog--bottom-controls .q-dialog__controls .button {
@@ -64,8 +69,8 @@
 
 .q-dialog__close-button {
   position: absolute;
-  right: calc(var(--q-space-base) * 6);
-  top: calc(var(--q-space-base) * 6);
+  right: calc(var(--q-space-base) * 2);
+  top: calc(var(--q-space-base) * 2);
 }
 
 ai-dialog-overlay {
