(icon-button) add padding right to text in buttons

--- a/client/src/elements/atoms/icon-button.css
+++ b/client/src/elements/atoms/icon-button.css
@@ -45,6 +45,7 @@ icon-button button:focus {
 
 .icon-button__text {
   min-width: 34px;
+  padding-right: var(--q-space-base);
 }
 
 .icon-button__text:empty {
