(icon button) center text if only text

--- a/client/src/elements/atoms/icon-button.css
+++ b/client/src/elements/atoms/icon-button.css
@@ -45,6 +45,7 @@ icon-button button:focus {
 
 .icon-button__text {
   min-width: 34px;
+  padding-left: var(--q-space-base);
   padding-right: var(--q-space-base);
 }
 
