--- a/client/src/elements/atoms/button-primary.css
+++ b/client/src/elements/atoms/button-primary.css
@@ -1,21 +1,31 @@
 button-primary {
   display: block;
+  color: var(--q-color-white);
 }
 
 button-primary button {
   background-color: var(--q-color-primary-2);
-  color: var(--q-color-white);
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 button-primary button[disabled] {
   background-color: var(--q-color-primary-1);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 button-primary button:hover {
   background-color: var(--q-color-primary-3);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 button-primary button:focus {
+  background-color: var(--q-color-primary-3);
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
+
+button-primary button:active {
+  background-color: var(--q-color-primary-3);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.25);
+}
+
+
