(tool selection) Fix centering on large screens

--- a/client/src/elements/organisms/tool-selection.css
+++ b/client/src/elements/organisms/tool-selection.css
@@ -22,6 +22,8 @@ tool-selection {
   flex-wrap: wrap;
   justify-content: center;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 tool-selection a:hover,
