(preview) Fix preview-container border

--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -6,4 +6,5 @@ preview-container {
   margin-top: calc(var(--q-space-base) * 2);
   margin-right: calc(var(--q-space-base) * 2);
   margin-bottom: calc(var(--q-space-base) * 2);
+  border: solid 1px var(--q-color-gray-4);
 }
