--- a/client/src/styles/config.css
+++ b/client/src/styles/config.css
@@ -21,7 +21,7 @@
   --q-color-warning: #ff9000;
   --q-color-warning-light: #ffecd3;
   --q-color-error: #c31906;
-  --q-color-error-light: #f3d1cd;
+  --q-color-error-light: #cf4738;
 
   /* fonts */
   --q-h1-size: 22px;
