(item-list-entry) Add margin-bottom to last entry so option menu gets displayed

--- a/client/src/elements/molecules/item-list-entry.css
+++ b/client/src/elements/molecules/item-list-entry.css
@@ -33,6 +33,10 @@ item-list-entry a > span:not(.item-list-entry__state-tag) {
   flex-basis: 0;
 }
 
+item-list-entry:last-child {
+  margin-bottom: 160px;
+}
+
 .item-list-entry__state-tag {
   height: 20px;
   line-height: 20px !important;
