--- a/client/src/livingdocs-component-app/app.css
+++ b/client/src/livingdocs-component-app/app.css
@@ -175,22 +175,41 @@ html {
   overflow: auto;
   display: flex;
   justify-content: center;
-  height: auto;
-  max-height: 80%;
+  height: 80%;
 }
 
 .livingdocs-component-item-preview__message {
   align-self: center;
 }
 
+.livingdocs-component-item-controls-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 20%;
+}
+
 .livingdocs-component-item-controls {
   margin-bottom: var(--q-space-base);
 }
 
+.livingdocs-component-item-title {
+  margin-top: calc(var(--q-space-base) * 2);
+}
+
+.livingdocs-component-item-preview > div {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 100%;
+  max-height: 100%;
+  margin-top: 0;
+}
+
 .livingdocs-component-item-preview preview-container {
-  flex-grow: 1;
   --preview-container-overflow-y: hidden;
   --preview-container-margin-top: 0px;
+  margin: 0;
 }
 
 .livingdocs-component-item-controls {
