(fonts) make font line-heights configurable with css custom properties

--- a/client/src/styles/config.css
+++ b/client/src/styles/config.css
@@ -32,8 +32,11 @@
   --q-h6-size: 12px;
 
   --q-text-size: 14px;
+  --q-text-line-height: 1.64;
   --q-text-small-size: 12px;
+  --q-text-small-line-height: 1.58;
   --q-text-big-size: 16px;
+  --q-text-big-line-height: 1.625;
 
   --q-h1-weight: 700;
   --q-h2-weight: 400;
