--- a/client/src/styles/fonts.css
+++ b/client/src/styles/fonts.css
@@ -57,17 +57,17 @@ h6 {
 
 .q-text-small {
   font-size: var(--q-text-small-size);
-  line-height: 1.58;
+  line-height: var(--q-text-small-line-height);
 }
 
 .q-text {
   font-size: var(--q-text-size);
-  line-height: 1.64;
+  line-height: var(--q-text-line-height);
 }
 
 .q-text--big {
   font-size: var(--q-text-big-size);
-  line-height: 1.625;
+  line-height: var(--q-text-big-line-height);
 }
 
 .q-text--light {
