--- a/client/src/elements/organisms/items-list.css
+++ b/client/src/elements/organisms/items-list.css
@@ -14,3 +14,9 @@ items-list {
   flex-grow: 1;
   flex-basis: 0;
 }
+
+.items-list--empty {
+  display: flex;
+  justify-content: center;
+  margin-top: calc(var(--q-space-base) * 16);
+}
