(items-list) Move empty-list-message to index page and fix infinite scroll

--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -96,3 +96,9 @@
   transform-origin: 100% 100%;
   cursor: pointer;
 }
+
+.index__empty-list-message {
+  display: flex;
+  justify-content: center;
+  margin-top: calc(var(--q-space-base) * 16);
+}
