(layout) set min-width to item-overview for better small screen support

--- a/client/src/pages/item-overview.css
+++ b/client/src/pages/item-overview.css
@@ -1,6 +1,7 @@
 .item-overview-container {
   display: flex;
   margin-top: calc(var(--q-space-base) * 4);
+  min-width: 800px;
 }
 
 .item-overview__content {
