(notifications) improve notification spacing

--- a/client/src/elements/item-preview/item-preview.css
+++ b/client/src/elements/item-preview/item-preview.css
@@ -37,3 +37,7 @@ item-preview {
 .item-preview__notification {
   width: 180px;
 }
+
+.item-preview__notification notification {
+  margin-bottom: calc(var(--q-space-base) * 2);
+}
