--- a/client/src/elements/molecules/notification.css
+++ b/client/src/elements/molecules/notification.css
@@ -1,7 +1,10 @@
+notification {
+  display: block;
+}
+
 .notification {
   position: relative;
   padding: calc(var(--q-space-base) * 2);
-  margin-top: calc(var(--q-space-base) * 2);
   border-radius: 4px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
   width: 180px;
