(q-from select) Visual fix for select input element

--- a/client/src/styles/q-form.css
+++ b/client/src/styles/q-form.css
@@ -135,6 +135,7 @@
     calc(var(--q-space-base) / 2) calc(var(--q-space-base));
   appearance: none;
   -webkit-appearance: none;
+  -moz-appearance: none;
   border-radius: 0;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: rgb%28138, 138, 138%29'></polygon></svg>");
   background-origin: content-box;
