(editor) disabled the save/activate buttons if the item is currently saving. Never save an item while it is saving

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,3 +1,8 @@
 .icon {
   display: block;
 }
+
+/* this is here to make the buttons inside links not trigger events that may make the click handler for any route binding not work */
+a .button, a button {
+  pointer-events: none;
+}
