--- a/client/src/elements/atoms/button-secondary.css
+++ b/client/src/elements/atoms/button-secondary.css
@@ -4,13 +4,8 @@ button-secondary {
 }
 
 button-secondary icon-button button {
+  border-color: var(--q-color-gray-4);
   background-color: var(--q-color-white);
-  border-color: var(--q-color-gray-4);  
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-}
-
-button-secondary icon-button button[disabled] {
-  color: var(--q-color-gray-5);
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -30,4 +25,11 @@ button-secondary icon-button button:active {
   border-color: var(--q-color-gray-5);
   background-color: var(--q-color-gray-3);
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.25);
+}
+
+button-secondary icon-button button[disabled] {
+  color: var(--q-color-gray-5);
+  border-color: var(--q-color-gray-4);
+  background-color: var(--q-color-white);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
