--- a/client/src/livingdocs-component-app/app.css
+++ b/client/src/livingdocs-component-app/app.css
@@ -17,9 +17,9 @@ html {
 
 .livingdocs-component-item-container {
   width: 50%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .livingdocs-component-search {
@@ -171,34 +171,38 @@ html {
   text-decoration: none;
 }
 
-.livingdocs-component-item-preview,
-.livingdocs-component-item-options,
-.livingdocs-component-item-controls {
+.livingdocs-component-item-preview-container,
+.livingdocs-component-item-controls-container {
   width: 90%;
   margin: var(--q-space-base) auto 0 auto;
 }
 
 .livingdocs-component-item-options-container {
+  overflow-y: scroll;
+}
+
+.livingdocs-component-item-options {
   width: 200px;
 }
 
-.livingdocs-component-item-preview {
+.livingdocs-component-item-preview-container {
   margin-top: 0;
-  overflow: auto;
   display: flex;
   justify-content: center;
-  height: 75%;
 }
 
-.livingdocs-component-item-preview__message {
-  align-self: center;
+.livingdocs-component-item-preview-message-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 30%;
 }
 
 .livingdocs-component-item-controls-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  height: 25%;
+  margin-top: 0;
 }
 
 .livingdocs-component-item-controls {
@@ -209,7 +213,7 @@ html {
   margin-top: calc(var(--q-space-base) * 2);
 }
 
-.livingdocs-component-item-preview > div {
+.livingdocs-component-item-preview {
   display: flex;
   flex-direction: column;
   height: auto;
