--- a/client/src/livingdocs-component-app/app.css
+++ b/client/src/livingdocs-component-app/app.css
@@ -216,9 +216,9 @@ html {
 .livingdocs-component-item-preview {
   display: flex;
   flex-direction: column;
-  height: auto;
   width: 100%;
-  max-height: 100%;
+  height: auto;
+  max-height: 450px;
   margin-top: 0;
 }
 
