--- a/client/src/livingdocs-component-app/app.css
+++ b/client/src/livingdocs-component-app/app.css
@@ -178,7 +178,7 @@ html {
 }
 
 .livingdocs-component-item-options-container {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .livingdocs-component-item-options {
