--- a/client/src/pages/tasks.css
+++ b/client/src/pages/tasks.css
@@ -1,33 +1,34 @@
-.tasks {
-  height: 100%;
+#tasks {
   display: flex;
-  align-items: flex-start;
+  justify-content: flex-start;
   padding: calc(var(--q-space-base) * 4) calc(var(--q-space-base) * 6);
 }
 
-#tasks--input {
-  width: 20%;
+#tasks__sidebar {
+  flex-basis: 15%;
+  flex-shrink: 0;
+  margin-right: 1%;
 }
 
-#tasks--output {
-  width: 65%;
-  margin-left: 5%;
-}
-
-.tasks--output--json {
-  width: 800px;
-  background-color: white;
-  border: 1px solid black;
-  padding: 8px;
-  white-space: pre-wrap; 
-  word-wrap: break-word;
-}
-
-#tasks--sidebar {
-  width: 15%;
-}
-
-#tasks--list {
+#tasks__list {
   list-style-type: none;
   padding: 0;
+}
+
+#tasks__input {
+  flex-basis: 20%;
+  flex-shrink: 0;
+  margin-right: 1%;
+}
+
+#tasks__output {
+  flex-grow: 1;
+}
+
+.tasks__output-json {
+  background-color: white;
+  border: 1px solid black;
+  padding: calc(var(--q-space-base) * 2);
+  white-space: pre-wrap;
+  word-break: break-all;
 }
