--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -37,8 +37,8 @@
   display: block;
   margin: calc(var(--q-space-base)) 0;
 
-  font-size: var(--q-h4-size);
-  font-weight: var(--q-h4-weight);
+  font-size: var(--q-h4-size) !important;
+  font-weight: var(--q-h4-weight) !important;
   color: var(--q-text-color);
   margin-bottom: var(--q-space-base);
 }
