--- a/client/src/elements/schema-editor/schema-editor.css
+++ b/client/src/elements/schema-editor/schema-editor.css
@@ -28,6 +28,10 @@ schema-editor fieldset fieldset.compact > schema-editor-wrapper {
   margin-bottom: calc(var(--q-space-base) * 2);
 }
 
+.input-group-title {
+  margin: calc(var(--q-space-base) * 2) 0 var(--q-space-base) 0;
+}
+
 schema-editor-wrapper .input-group-title {
   font-size: var(--q-h2-size);
   font-weight: var(--q-h2-weight);
